--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="icon" href="image/ico"
-    href="./img/logo.ico">
+    <link rel="icon" href="./img/logo.ico">
 </head>
 
 <body>
