--- a/index.html
+++ b/index.html
@@ -57,15 +57,41 @@
     <p class="p-about">Brindamos Servicios Profesionales de Cerrajería Residencial y Automotriz, cambios de cerraduras, apertura de cajas fuertes, apertura de carros, etc.
     </p>
   </section>
-
+ 
   <section class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14976.726226125682!2d-87.4822091921875!3d20.20977520000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4fd7d6365b42ff%3A0x5bd56a97749e5265!2sCerrajeria%20Maya%20Key!5e0!3m2!1ses-419!2smx!4v1661785602875!5m2!1ses-419!2smx" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <!-- Footer -->
 
-
-
-
+  <section>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/galeria/1.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/galeria/2.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/galeria/3.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/galeria/4.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/galeria/5.jpeg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 <footer class="footer" id="contacto">
   <h2>Nuestras Redes</h2>
   <div>
@@ -74,9 +100,26 @@
     <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
 
   </div>
+  <br>
+  <div class="info">
+    <a href="mailto:phillipmartines4817@gmail.com">Email: phillipmartines4817@gmail.com</a>
+    <ul class="horarios">
+      <li>Lunes 9:00-19:00</li>
+      <li>Martes 9:00-19:00</li>
+      <li>Miércoles 9:00-17:00</li>
+      <li>Jueves 9:00-19:00</li>
+      <li>Viernes 9:00-19:00</li>
+      <li>Sábado 9:00-17:00</li>
+      <li>Domingo Cerrado</li>
+    </ul>
+    
+  </div>
+  <br>
+  &copy; 2022 Maya Key Tulum
 </footer>
 
     <!-- JS BOOTSTRAP -->
-<script src="./js/bootstrap.bundle.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
