--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <br>
   <div class="info">
     <a href="mailto:phillipmartines4817@gmail.com">Email: phillipmartines4817@gmail.com</a>
+    <p>Phone: 984-156-5024</p>
     <ul class="horarios">
       <li>Lunes 9:00-19:00</li>
       <li>Martes 9:00-19:00</li>
