--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <footer class="footer" id="contacto">
   <h2>Nuestras Redes</h2>
   <div>
-    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
-    <a href="https://www.twitter.com/" target="_blank"><i class="bi bi-twitter"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.facebook.com/Tulummayakeycerrajeria" target="_blank"><i class="bi bi-facebook"></i></a>
+    <!-- <a href="https://www.twitter.com/" target="_blank"><i class="bi bi-twitter"></i></a> -->
+    <a href="https://www.instagram.com/cerrajeria_maya_key_tulum" target="_blank"><i class="bi bi-instagram"></i></a>
 
   </div>
   <br>
