--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="WCFkEJdj8lQIl5JlwixEpTNzIidfHe0GR2-Qc9YlRxg" />
     <title>Servicios de Cerrajería Residencial y Automotriz | Maya Key Tulum</title>
     <!-- CSS BOOTSTRAP -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
