Update meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="WCFkEJdj8lQIl5JlwixEpTNzIidfHe0GR2-Qc9YlRxg" />
-    <title>Servicios de Cerrajería Residencial y Automotriz | Maya Key Tulum</title>
+    <meta name="description" content="Somos una empresa especializada en el servicio cerrajeria, cerrajeria automotor y llaves. Servicio a Domicilio en Tulum Quintana Roo">
+    <title>Servicio Cerrajeria Automotriz y Residencial | Maya Key Tulum</title>
     <!-- CSS BOOTSTRAP -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
