mejoramiento de accesibilidad

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- navbar -->
   <nav class="navbar navbar-expand-lg sticky-top navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./img/logo.png" alt="" class="logo">
+      <a class="navbar-brand" href="#" title="boton de inicio">
+        <img src="./img/logo.png" alt="logotipo de cerrajeria mayakey tulum" class="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
   </header>
 
   <!-- Whatsapp Button -->
-  <a class="botonwhats" href="https://api.whatsapp.com/send?phone=+529841565024" target="_blank"><i class="bi bi-whatsapp whatsapp-icon"></i></a>
+  <a class="botonwhats" title="boton whatsapp" href="https://api.whatsapp.com/send?phone=+529841565024" target="_blank"><i class="bi bi-whatsapp whatsapp-icon"></i></a>
  
   <!-- Acerca De -->
   <section class="about" id="servicios">
