--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg sticky-top navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" title="boton de inicio">
-        <img src="./img/logo.png" alt="logotipo de cerrajeria mayakey tulum" width="80px"  class="logo">
+        <img src="./img/logo.webp" alt="logotipo de cerrajeria mayakey tulum" width="80px"  class="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
