--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="WCFkEJdj8lQIl5JlwixEpTNzIidfHe0GR2-Qc9YlRxg" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Servicio Cerrajeria Automotriz y Residencial | Maya Key Tulum</title>
     <meta name="description" content="Somos una empresa especializada en el servicio cerrajeria, cerrajeria automotor y llaves. Servicio a Domicilio en Tulum Quintana Roo">
     <!-- CSS BOOTSTRAP -->
