--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/galeria/1.webp" class="d-block w-100" alt="...">
+          <img src="./img/galeria/1.webp" lazy="loading" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/galeria/2.webp" class="d-block w-100" alt="...">
+          <img src="./img/galeria/2.webp" lazy="loading" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/galeria/3.webp" class="d-block w-100" alt="...">
+          <img src="./img/galeria/3.webp" lazy="loading" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/galeria/4.webp" class="d-block w-100" alt="...">
+          <img src="./img/galeria/4.webp"  lazy="loading" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/galeria/5.webp" class="d-block w-100" alt="...">
+          <img src="./img/galeria/5.webp" lazy="loading" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
