--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     </div>
   </nav>
   <!-- header -->
+  
+  <div class="capa">
+    <video muted autoplay loop>
+      <source src="./img/cerrajeriatulum-mayakeytulum-cerrajero.mp4" type="video/mp4" title="cerrajeria tulum mayakey tulum cerrajero">
+    </video></div>
   <header class="header">
     <section class="title mx-4" loading="lazy">
       <h1 class="fw-bold">Especialistas en<br><span class="casero">Cerrajería</span></h1>
