--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- header -->
   
   <div class="capa">
-    <video muted autoplay loop>
+    <video muted autoplay playsinline loop>
       <source src="./img/cerrajeriatulum-mayakeytulum-cerrajero.mp4" type="video/mp4" title="cerrajeria tulum mayakey tulum cerrajero">
     </video></div>
   <header class="header">
